=== 0.3.0:

* Added the ability to support multiple styles of cardinality notations.
  Currently supported types are 'simple' and 'advanced'.
* Added option to exclude indirect relationships (indirect=false).
* Added option to change or disable the diagram title (title='Custom title').
* Altered the type descriptions of attributes.
* Renamed options for flexibility and clarity.
* Improved internal logic to determine the cardinality of relationships.
* More versatile API that allows you to inspect relationships and their
  cardinalities.
* Changed line widths to 1.0 to avoid invisible node boundaries with older
  versions of Graphviz.
* Bundled examples based on actual applications.

=== 0.2.0

* Added simple way to create your own type of diagrams with a tiny amount of code.
* Improved internal API and documentation.
* Subtle changes in diagram style.
* Fixed error where non-mutual relationships might be inadvertently classified
  as indirect relationships.
* Fixed error where diagrams with a vertical layout might fail to be generated.

=== 0.1.1

* Fixed small errors in Ruby 1.8.7.
* Abort generation of diagrams when there are no models.

=== 0.1.0

* Released on September 20th, 2010.
* First public release.