@@ -12,7 +12,7 @@ Jeweler::Tasks.new do |spec|
   spec.email = "r.timmermans@voormedia.com"
   spec.homepage = "http://rails-erd.rubyforge.org/"
 
-  spec.add_runtime_dependency "activerecord", "~> 3.0.0"
+  spec.add_runtime_dependency "activerecord", "~> 3.0"
   spec.add_runtime_dependency "activesupport", "~> 3.0"
   spec.add_runtime_dependency "ruby-graphviz", "~> 0.9.17"
   spec.add_development_dependency "sqlite3-ruby"
