@@ -1,3 +1,7 @@
+=== To be released:
+
+* Added compatibility for Active Record 3.1 and Arel 2.0.
+
 === 0.3.0:
 
 * Added the ability to support multiple styles of cardinality notations.
